// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordTextInput when focusable is false also renders with white border when on focus 1`] = `
<View
  style={
    Array [
      Object {
        "focusable": false,
      },
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 26,
        "borderWidth": 2,
        "color": "#3c3d3a",
        "flexDirection": "row",
        "fontFamily": "SharpSans-Semibold",
        "fontSize": 16,
        "height": 52,
        "paddingHorizontal": 28,
      },
      undefined,
      Object {
        "borderColor": "#fff",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    onBlur={[Function]}
    onFocus={[Function]}
    rejectResponderTermination={true}
    secureTextEntry={true}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "flex": 1,
        "height": "100%",
        "padding": 5,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/password-hide.png",
        }
      }
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-end",
          "backgroundColor": "transparent",
          "flex": 1,
          "height": 25,
          "padding": 10,
          "resizeMode": "contain",
          "width": 25,
        }
      }
    />
  </View>
</View>
`;

exports[`PasswordTextInput when focusable is false renders with white border when on blur 1`] = `
<View
  style={
    Array [
      Object {
        "focusable": false,
      },
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 26,
        "borderWidth": 2,
        "color": "#3c3d3a",
        "flexDirection": "row",
        "fontFamily": "SharpSans-Semibold",
        "fontSize": 16,
        "height": 52,
        "paddingHorizontal": 28,
      },
      undefined,
      Object {
        "borderColor": "#fff",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    onBlur={[Function]}
    onFocus={[Function]}
    rejectResponderTermination={true}
    secureTextEntry={true}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "flex": 1,
        "height": "100%",
        "padding": 5,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/password-hide.png",
        }
      }
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-end",
          "backgroundColor": "transparent",
          "flex": 1,
          "height": 25,
          "padding": 10,
          "resizeMode": "contain",
          "width": 25,
        }
      }
    />
  </View>
</View>
`;

exports[`PasswordTextInput when focusable is true renders with green border when on focus 1`] = `
<View
  style={
    Array [
      Object {
        "focusable": true,
      },
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 26,
        "borderWidth": 2,
        "color": "#3c3d3a",
        "flexDirection": "row",
        "fontFamily": "SharpSans-Semibold",
        "fontSize": 16,
        "height": 52,
        "paddingHorizontal": 28,
      },
      undefined,
      Object {
        "borderColor": "#14d64d",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    onBlur={[Function]}
    onFocus={[Function]}
    rejectResponderTermination={true}
    secureTextEntry={true}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "flex": 1,
        "height": "100%",
        "padding": 5,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/password-hide.png",
        }
      }
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-end",
          "backgroundColor": "transparent",
          "flex": 1,
          "height": 25,
          "padding": 10,
          "resizeMode": "contain",
          "width": 25,
        }
      }
    />
  </View>
</View>
`;

exports[`PasswordTextInput when focusable is true renders with white border when on blur 1`] = `
<View
  style={
    Array [
      Object {
        "focusable": true,
      },
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 26,
        "borderWidth": 2,
        "color": "#3c3d3a",
        "flexDirection": "row",
        "fontFamily": "SharpSans-Semibold",
        "fontSize": 16,
        "height": 52,
        "paddingHorizontal": 28,
      },
      undefined,
      Object {
        "borderColor": "#fff",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    onBlur={[Function]}
    onFocus={[Function]}
    rejectResponderTermination={true}
    secureTextEntry={true}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "flex": 1,
        "height": "100%",
        "padding": 5,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/password-hide.png",
        }
      }
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-end",
          "backgroundColor": "transparent",
          "flex": 1,
          "height": 25,
          "padding": 10,
          "resizeMode": "contain",
          "width": 25,
        }
      }
    />
  </View>
</View>
`;
